# dnd-stat-tracker-slint

./: Cargo.toml  LICENSE  README.md  build.rs  build_debug.bat
res/characters/: Alden Kass.json  Woooo aAAAA dDDDD gfggggg.json  test char123123.json  test character copy 2.json  test character copy 3.json  test character copy.json  test character.json
res/spells/: spell_level_0.json  spell_level_1.json  spell_level_2.json  spell_level_3.json  spell_level_4.json  spell_level_5.json  spell_level_6.json  spell_level_7.json  spell_level_8.json  spell_level_9.json
src/: main.rs  utils.rs
src/dnd_logic/: character.rs  eq.rs  mod.rs  money.rs  prelude.rs  skill.rs  skill_type.rs  spell.rs  spell_list.rs  stat_type.rs  stats.rs  weapon.rs
ui/: appwindow.slint  logic.slint
ui/elements/: button.slint  character_grid_entry.slint  checkbox.slint  drawing.slint  eq.slint  globals.slint  palette.slint  string_select_list.slint  text_widgets.slint  weapon.slint
ui/elements/panels/: ac_hp_money.slint  character_select_grid.slint  character_select_top_bar.slint  features_traits.slint  saves_profs.slint  spelllist.slint  spelllist_eq.slint  stats.slint  top_bar.slint
ui/elements/states/: character-select.slint  stat-tracker.slint
